# ws-chat

./: .gitignore  CMakeLists.txt  README.md  index.html  main.cpp  main.js
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
public/: index.html  main.js
